[gd_scene load_steps=20 format=2]

[ext_resource path="res://Overlay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Rye-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Olden-Text-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/gui/ui-arrow-big.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Rye-Button-18.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/Olden-Text-16.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/Olden-Text-12.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/Rye-Button-28.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0.972549, 0.972549, 0.972549, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Overlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameView" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameView"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainTags" type="HBoxContainer" parent="GameView/VBoxContainer"]
margin_right = 960.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="GameView/VBoxContainer/MainTags"]
margin_right = 240.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3

[node name="Main" type="VBoxContainer" parent="GameView/VBoxContainer/MainTags"]
margin_left = 244.0
margin_right = 716.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TotalPoints" type="Label" parent="GameView/VBoxContainer/MainTags/Main"]
unique_name_in_owner = true
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_right = 472.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "000"
align = 1
valign = 1

[node name="Right" type="VBoxContainer" parent="GameView/VBoxContainer/MainTags"]
margin_left = 720.0
margin_right = 960.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3

[node name="BottomTags" type="HBoxContainer" parent="GameView/VBoxContainer"]
margin_top = 440.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GameView/VBoxContainer/BottomTags"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_top = 44.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_vertical = 8
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="Main" type="CenterContainer" parent="GameView/VBoxContainer/BottomTags"]
margin_left = 164.0
margin_right = 796.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameView/VBoxContainer/BottomTags/Main"]
margin_left = 228.0
margin_top = 10.0
margin_right = 404.0
margin_bottom = 90.0
mouse_filter = 2
custom_constants/separation = -4

[node name="SectorLevel" type="Label" parent="GameView/VBoxContainer/BottomTags/Main/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 28.0
margin_right = 148.0
margin_bottom = 56.0
rect_min_size = Vector2( 120, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "01"
align = 1
valign = 1

[node name="JumpOutButton" type="Button" parent="GameView/VBoxContainer/BottomTags/Main/VBoxContainer"]
margin_top = 52.0
margin_right = 176.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = ">>  Jump Out  <<"

[node name="LastHighsocre" type="Label" parent="GameView/VBoxContainer/BottomTags"]
unique_name_in_owner = true
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 800.0
margin_top = 44.0
margin_right = 960.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 4
size_flags_vertical = 8
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="DialogView" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialogView"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainTags" type="HBoxContainer" parent="DialogView/VBoxContainer"]
margin_right = 960.0
margin_bottom = 436.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="DialogView/VBoxContainer/MainTags"]
margin_right = 240.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3

[node name="Main" type="VBoxContainer" parent="DialogView/VBoxContainer/MainTags"]
margin_left = 244.0
margin_right = 716.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LastPoints" type="Label" parent="DialogView/VBoxContainer/MainTags/Main"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_right = 472.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "000"
align = 1
valign = 1

[node name="Right" type="VBoxContainer" parent="DialogView/VBoxContainer/MainTags"]
margin_left = 720.0
margin_right = 960.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
size_flags_vertical = 3

[node name="BottomTags" type="HBoxContainer" parent="DialogView/VBoxContainer"]
margin_top = 440.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="DialogView/VBoxContainer/BottomTags"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_top = 44.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="Main" type="CenterContainer" parent="DialogView/VBoxContainer/BottomTags"]
margin_left = 164.0
margin_right = 796.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DialogView/VBoxContainer/BottomTags/Main"]
margin_left = 236.0
margin_top = 10.0
margin_right = 395.0
margin_bottom = 90.0
custom_constants/separation = -4

[node name="SectorLevel" type="Label" parent="DialogView/VBoxContainer/BottomTags/Main/VBoxContainer"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 19.0
margin_right = 139.0
margin_bottom = 56.0
rect_min_size = Vector2( 120, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "01"
align = 1
valign = 1

[node name="JumpInButton" type="Button" parent="DialogView/VBoxContainer/BottomTags/Main/VBoxContainer"]
margin_top = 52.0
margin_right = 159.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = ">>  Jump In  <<"

[node name="LastHighsocre" type="Label" parent="DialogView/VBoxContainer/BottomTags"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 800.0
margin_top = 44.0
margin_right = 960.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="TutorialView" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="TutorialView"]
visible = false
margin_left = 438.0
margin_top = 346.155
margin_right = 675.0
margin_bottom = 382.155
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_focus = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_pressed = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Enter The Game"
flat = true

[node name="Arrow-Start" type="Sprite" parent="TutorialView"]
visible = false
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 720, 359 )
rotation = -1.67901
scale = Vector2( 0.225, 0.35 )
texture = ExtResource( 4 )

[node name="Arrow-Start2" type="Sprite" parent="TutorialView"]
visible = false
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 392, 380 )
rotation = -5.07367
scale = Vector2( 0.225, 0.35 )
texture = ExtResource( 4 )

[node name="TextLabel-You" type="RichTextLabel" parent="TutorialView"]
margin_left = 38.0
margin_top = 41.0
margin_right = 269.0
margin_bottom = 397.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "You: The Space Whale"
text = "You: The Space Whale"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="TextLabel-You-Info" type="RichTextLabel" parent="TutorialView/TextLabel-You"]
margin_left = 10.0
margin_top = 32.0
margin_right = 219.0
margin_bottom = 358.0
custom_colors/default_color = Color( 0.811765, 0.811765, 0.811765, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "You float around in space and harvest the stardust needed to feed yourself and your home.

As you munch away, particles accumulate under your skin as gems and mineral nuggets. This attracts them, those here to get under your skin.

So you evolved to do what needs to be done.



[center][color=#fefefe]\"Bring Home the Bacon!\"[/color][/center]
[center]and[/center]
[center][color=#fefefe]\"Defend your Harvest!\"[/color][/center]"
text = "You float around in space and harvest the stardust needed to feed yourself and your home.

As you munch away, particles accumulate under your skin as gems and mineral nuggets. This attracts them, those here to get under your skin.

So you evolved to do what needs to be done.



\"Bring Home the Bacon!\"
and
\"Defend your Harvest!\""
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Arrow-You" type="Sprite" parent="TutorialView"]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 332, 230 )
rotation = 2.03505
scale = Vector2( 0.18, 0.3 )
texture = ExtResource( 4 )

[node name="TextLabel-Them" type="RichTextLabel" parent="TutorialView"]
margin_left = 663.65
margin_top = 63.0
margin_right = 941.65
margin_bottom = 328.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "Them: Dust Monkies"
text = "Them: Dust Monkies"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="TextLabel-Them-Info" type="RichTextLabel" parent="TutorialView/TextLabel-Them"]
margin_left = 10.0
margin_top = 32.0
margin_right = 269.0
margin_bottom = 250.0
mouse_filter = 2
custom_colors/default_color = Color( 0.811765, 0.811765, 0.811765, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "They started as an experiment to speed up dust extraction from gravity wells, but we all know that they got a bit out of hand.

The monkey farms where setup to to increase dust harvesting yields but now they harvest us and can be found across all dust fields known to whales.


[center][color=#fefefe]\"They must be destroyed!\"[/color][/center]"
text = "They started as an experiment to speed up dust extraction from gravity wells, but we all know that they got a bit out of hand.

The monkey farms where setup to to increase dust harvesting yields but now they harvest us and can be found across all dust fields known to whales.


\"They must be destroyed!\""
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Arrow-Them" type="Sprite" parent="TutorialView"]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 608, 129 )
rotation = -5.07193
scale = Vector2( 0.18, 0.3 )
texture = ExtResource( 4 )

[node name="TextLabel-Top" type="RichTextLabel" parent="TutorialView"]
margin_left = 289.0
margin_top = 111.0
margin_right = 421.0
margin_bottom = 144.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Kill Count[/center]"
text = "Kill Count"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Arrow-Top" type="Sprite" parent="TutorialView"]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 385, 81 )
rotation = 0.79587
scale = Vector2( 0.125, 0.2 )
texture = ExtResource( 4 )

[node name="TextLabel-Left" type="RichTextLabel" parent="TutorialView"]
margin_left = 46.0
margin_top = 427.0
margin_right = 178.0
margin_bottom = 460.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Thread Level[/center]"
text = "Thread Level"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Arrow-Left" type="Sprite" parent="TutorialView"]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 90, 472 )
rotation = -2.45917
scale = Vector2( 0.125, 0.2 )
texture = ExtResource( 4 )

[node name="TextLabel-Right" type="RichTextLabel" parent="TutorialView"]
margin_left = 785.0
margin_top = 424.0
margin_right = 917.0
margin_bottom = 452.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Highscore[/center]"
text = "Highscore"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Arrow-Right" type="Sprite" parent="TutorialView"]
modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
position = Vector2( 864, 471 )
rotation = 2.79253
scale = Vector2( 0.125, 0.2 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialView"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="MainTags" type="HBoxContainer" parent="TutorialView/VBoxContainer"]
margin_right = 960.0
margin_bottom = 436.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="TutorialView/VBoxContainer/MainTags"]
margin_right = 240.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="Main" type="VBoxContainer" parent="TutorialView/VBoxContainer/MainTags"]
margin_left = 244.0
margin_right = 716.0
margin_bottom = 436.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TotalPoints" type="Label" parent="TutorialView/VBoxContainer/MainTags/Main"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_right = 472.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "000"
align = 1
valign = 1

[node name="Right" type="VBoxContainer" parent="TutorialView/VBoxContainer/MainTags"]
margin_left = 720.0
margin_right = 960.0
margin_bottom = 436.0
rect_min_size = Vector2( 240, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="BottomTags" type="HBoxContainer" parent="TutorialView/VBoxContainer"]
margin_top = 440.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Left" type="Label" parent="TutorialView/VBoxContainer/BottomTags"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_top = 44.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="Main" type="CenterContainer" parent="TutorialView/VBoxContainer/BottomTags"]
margin_left = 124.0
margin_right = 836.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialView/VBoxContainer/BottomTags/Main"]
margin_left = 259.0
margin_top = 10.0
margin_right = 452.0
margin_bottom = 90.0
custom_constants/separation = -4

[node name="SectorLevel" type="Label" parent="TutorialView/VBoxContainer/BottomTags/Main/VBoxContainer"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 28.0
margin_right = 148.0
margin_bottom = 56.0
rect_min_size = Vector2( 120, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "01"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="TutorialView/VBoxContainer/BottomTags/Main/VBoxContainer"]
margin_top = 52.0
margin_right = 176.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = ">>  Start Game  <<"

[node name="TutorialHighsocre" type="Label" parent="TutorialView/VBoxContainer/BottomTags"]
unique_name_in_owner = true
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 840.0
margin_top = 44.0
margin_right = 1000.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 56 )
size_flags_horizontal = 4
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "0000"
align = 1
valign = 1

[node name="ShakeTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="GameView/VBoxContainer/BottomTags/Main/VBoxContainer/JumpOutButton" to="." method="_on_jump_out_pressed"]
[connection signal="pressed" from="DialogView/VBoxContainer/BottomTags/Main/VBoxContainer/JumpInButton" to="." method="_on_jump_in_pressed"]
[connection signal="pressed" from="TutorialView/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TutorialView/VBoxContainer/BottomTags/Main/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timeout"]
